; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_notes.c_note_get_default_ref.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_notes.c_note_get_default_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"core.notesref\00", align 1
@GIT_NOTES_DEFAULT_REF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*)* @note_get_default_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @note_get_default_ref(i8** %0, i32* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @git_repository_config__weakptr(i32** %5, i32* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %16

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @GIT_NOTES_DEFAULT_REF, align 4
  %15 = call i8* @git_config__get_string_force(i32* %13, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %12, %11
  %17 = phi i8* [ null, %11 ], [ %15, %12 ]
  %18 = load i8**, i8*** %3, align 8
  store i8* %17, i8** %18, align 8
  %19 = load i32, i32* %6, align 4
  ret i32 %19
}

declare dso_local i32 @git_repository_config__weakptr(i32**, i32*) #1

declare dso_local i8* @git_config__get_string_force(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
